﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-01-11 Michal Čihař  <michal@cihar.com>
    * main.php: Do not fail if no server is defined.

2006-01-10 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug #1394479, problem detecting ending 
      semi-colon, generates a SHOW KEYS FROM no table name

2006-01-09 Michal Čihař  <michal@cihar.com>
    * import.php: Work on 10MB chunks if no memory limit is set (bug
      #1399477).

2006-01-07 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php: bug #1395590 Safari Bookmark query fieldset float problem,
      thanks to Ryan Schmidt
    * libraries/common.lib.php: bug #1397749, Safari: space before
      PMA_linkOrButton link is part of the link, thanks to Ryan Schmidt
    * server_privileges.php: bug #1398018, Safari fieldset float issue in
      privileges screens, thanks to Ryan Schmidt
    * libraries/Config.class.php: bug #1398931, incorrect detection of
      PmaAbsoluteUri in vhost situations, thanks to Ryan Schmidt

2006-01-06 Marc Delisle  <lem9@users.sourceforge.net>
    * db_datadict.php, pdf_schema.php: bug #1389165, data dict shows all 
      columns as Null Yes
    * pdf_schema.php: display PDF schema did not work (missing dot)

2006-01-04 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: since we use DROP USER, some options to
      remove a user did not work under MySQL 4.1.x (only mode 2 worked),
      so I remove them from the dialog. Thanks to Ken Stanley for
      the bug report.
    * server_status.php: patch #1395031, not proper URL encoding,
      adapted from proposed solution by Matt LaPlante, thanks

2006-01-02 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_create_table.lib.php: bug #1389868, 
      Safari's rendering of "Create table" fieldset, thanks to Ryan Schmidt

2006-01-01 Michal Čihař  <michal@cihar.com>